[package]
name = "components"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
mlua = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# data formats
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }

# runtime
tokio = { workspace = true }
dotenvy = { workspace = true }

# database
sqlx = { workspace = true }
time = { workspace = true }
