[package]
name = "lua-astra"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
keywords = ["lua", "luau", "server", "webserver", "runtime"]
categories.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[[bin]]
name = "astra"
path = "src/main.rs"

[features]
default = ["luajit"]
luajit = ["mlua/luajit"]
luajit52 = ["mlua/luajit52"]
luau = ["mlua/luau"]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]

[dependencies]
mlua = { version = "0.10.3", features = [
    "serialize",
    "vendored",
    "async",
    "send",
    "error-send",
    "macros",
    "anyhow",
] }

reqwest = { workspace = true }
serde_json = { workspace = true }

# runtime
tokio = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
version-compare = { workspace = true }
