[package]
name = "lua-astra-standard-library"
version.workspace = true
authors.workspace = true
description = "standard library for Lua"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
exclude.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
mlua = { workspace = true }

# http
axum = { version = "0.8.7", features = ["macros", "multipart", "http2", "ws"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
reqwest = { workspace = true }
reqwest-websocket = "=0.5.1"
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = [
  "fs",
  "trace",
  "compression-full",
  "decompression-full",
] }
time = "0.3.44"
minijinja = { version = "2.12.0", features = [
  "loader",
  "urlencode",
  "loop_controls",
  "speedups",
] }
glob = "0.3.3"

# data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
sha2 = "0.10.9"
sha3 = "0.10.8"
base64 = "0.22.1"
bytes = { version = "1.11.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

# runtime
tokio = { workspace = true }
futures = "0.3.31"
dotenvy = "0.15.7"
tracing = { workspace = true }
regex = "1.12.2"
include_dir = { workspace = true }

# database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "sqlite",
  "json",
  "chrono",
  "uuid",
] }
