[package]
name = "lua-astra-standard-library"
version.workspace = true
authors.workspace = true
description = "standard library for Lua"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
exclude.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
# Parts
common = { path = "./parts/common" }
astra_http = { path = "./parts/astra_http" }
astra_serde = { path = "./parts/astra_serde" }
astra_small = { path = "./parts/astra_small" }

mlua = { workspace = true }
