[package]
name = "astra_serde"
version.workspace = true
authors.workspace = true
description = "Serialization and Deserialization functionality for Astra"
repository.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
