[package]
name = "common"
version.workspace = true
authors.workspace = true
description = "Common shared things for Astra"
repository.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
mlua = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
